[metadata]
name = PyLD
version = attr: pyld.__version__
description = Python implementation of the JSON-LD API
long-description = file: README.rst
author = Digital Bazaar
author-email = support@digitalbazaar.com
url = https://github.com/digitalbazaar/pyld
packages =
    c14n,
    pyld
license = BSD 3-Clause License
keywords = json, json-ld, linked data
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet
    Topic :: Software Development :: Libraries
    Typing :: Typed

[options]
zip-safe = False
python_requires = >= 3.6
package_dir =
    =src
install_requires =
    cachetools
    lxml
    httpx

[flake8]
exclude =
    .git,
    docs
max-complexity = 10
max-line-length = 88
inline-quotes = single
multiline-quotes = double
docstring-quotes = double
